# libtt

./: .gitignore  CMakeLists.txt  README
Modules/: FindCMU1394.cmake  Findlibdc1394.cmake  Findlibraw1394.cmake  Findopencv.cmake
src/: CMakeLists.txt  Doxyfile.in
src/tt/: CMakeLists.txt  TT.cpp  TT.h  Trax.cpp
src/tt/ds/: Image.cpp  Image.h
src/tt/input/: FirewireCamera.cpp  FirewireCamera.h  ImageDevice.cpp  ImageDevice.h  InputDevice.cpp  InputDevice.h  LinuxDC1394Camera.cpp  LinuxDC1394Camera.h  MoviePlayer.cpp  MoviePlayer.h  OpenCVCamera.cpp  OpenCVCamera.h  WindowsCMU1394Camera.cpp  WindowsCMU1394Camera.h
src/tt/output/: MovieRecorder.cpp  MovieRecorder.h  OutputDevice.cpp  OutputDevice.h
src/tt/process/: Bayer.cpp  Bayer.h
